feat: change to java 21